array de midudev

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                             <i class="fa-solid fa-angle-right"></i>
                         </button>
                     </div>
+                    <div class="caja-de-portadas">
+                        
+                    </div>
                 </div>
         </div>
         <div class="top-right">
@@ -109,4 +112,5 @@
     </footer>
     
 </body>
+    <script src="./main.js"></script>
 </html>
